CUPS: Add the "No Search Results Found" message.

Bug: 761288
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I0630b778aa8b758c7742af15541e83162f13d431
Reviewed-on: https://chromium-review.googlesource.com/875165
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532541}
Former-commit-id: 01689329050370714b6a9397e3f35b82eb11901f