chrome/browser/resources/settings/printing_page/cups_printers.js
@@ -186,4 +186,18 @@ Polymer({
     });
   },
 
+  /**
+   * @param {string} searchTerm
+   * @return {boolean} If the 'no-search-results-found' string should be shown.
+   * @private
+   */
+  showNoSearchResultsMessage_: function(searchTerm) {
+    if (!searchTerm || !this.printers.length)
+      return false;
+    searchTerm = searchTerm.toLowerCase();
+    return !this.printers.some(printer => {
+      return printer.printerName.toLowerCase().includes(searchTerm);
+    });
+  },
+
 });
